@@ -36,13 +36,14 @@ th {
 
 /* links */
 a {
-	color: #C6C6C6;
+	color: #fff;
 	background-color: inherit;
 	text-decoration: none;
 }
 a:hover {
 	color: #FFFFFF;
 	background-color: inherit;
+	text-decoration: underline;
 }
 
 /* headers */
