@@ -438,6 +438,10 @@ Total Connection Time = Gesamte Zeit online
 Average Ping = Durchschnittlicher Ping
 ordered by Points = Sortiert nach Punkten
 from all players = von allen Spielern
+from all bot&players = von allen Bots & Spielern
+Active players and no Bots = Aktive Spieler ohne BOTs
+All players and no Bots = Alle Spieler ohne BOTs
+All players and with Bots = Alle Spieler mit BOTs
 Suicides = Selbstmord
 Teammate Kills = Teamkills
 Weapon Accuracy = Waffengenauigkeit
