@@ -4,6 +4,7 @@ HLStats ChangeLog
 1.62 (tba)
 *) New: Design styles (css) updated.
 *) New: Zombie Panic! Source had no weapon pics
+*) Changed: New Rank section in player detail page. #37
 *) Fixed: old weapon images converted to png
 *) Fixed: #34
 *) Updated: blue.css and default.css small design changes
